adding CORS header

--- a/Web.config
+++ b/Web.config
@@ -7,5 +7,11 @@
     <staticContent>
       <mimeMap fileExtension=".json" mimeType="application/json" />
     </staticContent>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
+  
 </configuration>
